# conda-content-trust

./: .authors.yml  .codacy.yml  .codecov.yml  .coveragerc  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  HOW_WE_USE_GITHUB.md  README.md  README.rst  RELEASE.md  appveyor.yml  demo.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  strict_requirements.txt
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  disclaimer.txt
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  epic.yml
.github/template-files/: config.yml
.github/template-files/templates/: pull_request_template_details.md
.github/workflows/: build.yml  builds-review.yaml  ci.yml  cla.yml  labels.yml  lock.yml  project.yml  stale.yml  tests.yml  update.yml
car/: __main__.py  authentication.py  cli.py  common.py  encryption.py  metadata_construction.py  root_signing.py  signing.py
conda.recipe/: meta.yaml
conda_content_trust/: __init__.py  __main__.py  __version__.py  _version.py  api.py  authentication.py  cli.py  common.py  constants.py  encryption.py  metadata_construction.py  plugin.py  root_signing.py  signing.py  verification.py
demo/: 1.root.json  2.root.json  key_mgr.json
news/: 239-drop-py38-py39-add-py313  260-fix-import  264-fix-cryptography-hazmat-backends-attributeerror  277-on-demand-release  35-pre-commit  37-drop-python2  38-drop-conda_content_trust-encryption  56-upgrade-cryptography  58-black-isort  62-hatchling  68-canary  72-test-coverage  72-test-remove-unreachable  81-use-bytes-hex  96-cli-add-coverage  98-remove-flake8-ignores  add-signature-verification-plugin
recipe/: meta.yaml
tests/: __init__.py  repodata_sample.json  requirements.txt  test_authentication.py  test_benchmark.py  test_cli.py  test_common.py  test_metadata_construction.py  test_root.py  test_signing.py  test_subcommand.py  test_verification.py
tests/testdata/: repodata_no_packages.json  repodata_sample.json
